# auto-word-up

./: .gitignore  README.md  index.html  main.py  main.spec  package.json  pnpm-lock.yaml  pyproject.toml  test_main.http  vite.config.ts
core/utils/: log.py
core/web/: gemini.py  models.py
py/: main.py
py/web/: gemini.py  models.py  response.py
src/: App.css  App.tsx  globak.d.ts
src/component/: index.ts
src/component/Modal/: ModalFooter.tsx
src/features/: index.ts
src/features/About/: ChangelogCollapse.tsx  ModalChangelog.tsx  ModalReadme.tsx
src/features/Intro/: Intro.tsx  Step1Login.tsx  Step2ApiKey.tsx  Step3Query.tsx  Step4Cards.tsx
src/features/Layout/: Nav.tsx
src/features/Main/: Main.tsx  Step1Login.tsx  Step2ApiKey.tsx  Step3Query.tsx  Step4Cards.tsx
src/features/Models/: ModalChangelog.tsx  ModalNewVersion.tsx  ModalReadme.tsx  ModelPrompt.tsx
src/func/: copy.tsx  index.ts
src/layout/: index.ts
src/lib/: log.ts  type.ts
src/utils/: handleError.ts  log.ts  type.ts
